fix nav btn low contrast when dark theme on mobile

--- a/src/public/css/fileManager.css
+++ b/src/public/css/fileManager.css
@@ -111,7 +111,7 @@ li {
   background-color: transparent !important;
   border: 0px;
   font-size: 80%;
-  color: var(--control-color);
+  color: var(--default-text-color);
 }
 
 .btn-mobile:hover {
