--- a/src/public/scss/_fileManager-nav.scss
+++ b/src/public/scss/_fileManager-nav.scss
@@ -85,7 +85,7 @@ li {
     background-color: transparent !important;
     border: 0px;
     font-size: 80%;
-    color:var(--control-color);
+    color:var(--default-text-color);
 }
 
 .btn-mobile:hover {
